[tool.poetry]
name = "gardena-bluetooth"
version = "0.1.0"
description = ""
authors = ["Joakim Plate <elupus@ecce.se>"]
readme = "README.md"
packages = [{include = "gardena_bluetooth"}]

[tool.poetry.dependencies]
python = "^3.10"
bleak = "^0.20.2"
bleak-retry-connector = "^3.0.2"
asyncclick = {version = "^8.1.3.4", optional = true}

[tool.poetry.extras]
cli = ["asyncclick"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
