[tool.poetry]
name = "gardena-bluetooth"
version = "1.4.4"
description = ""
authors = ["Joakim Plate <elupus@ecce.se>"]
readme = "README.rst"
packages = [
    {include = "gardena_bluetooth"},
    {include = "gardena_bluetooth/py.typed"},
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bleak = ">=0.20.2"
bleak-retry-connector = ">=3.0.2"
asyncclick = {version = "^8.1.3.4", optional = true}
tzlocal = "^5.0.1"
pytest-asyncio = {version = "^0.21.0", optional = true}
black = {version = "^23.3.0", optional = true}
ruff = {version = "^0.0.272", optional = true}

[tool.poetry.extras]
cli = ["asyncclick"]
test = ["asyncclick", "pytest-asyncio", "black", "ruff"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.init_options]
asyncio_mode = "auto"
