[project]
name = "gardena-bluetooth"
version = "1.6.0"
description = ""
readme = "README.rst"
requires-python = ">=3.10"
authors = [
    {name = "Joakim Plate", email = "elupus@ecce.se"},
]
license = { text = "MIT" }

dependencies = [
    "bleak >=0.20.2",
    "bleak-retry-connector >=3.0.2",
    "tzlocal >=5.0.1",
]

[project.optional-dependencies]
cli = ["asyncclick >=8.1.3.4"]
test = [
    "asyncclick >=8.1.3.4",
    "pytest-asyncio >=0.21.0",
    "black >=23.3.0",
    "ruff >=0.0.272",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gardena_bluetooth*"]

[tool.setuptools.package-data]
"gardena_bluetooth" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
